--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -28,3 +28,8 @@ jobs:
         run: |
           pytest -v --html=report.html --self-contained-html
 
+      - name: Upload Pytest HTML Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: pytest-report
+          path: report.html
